--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,19 +3,35 @@
     package="com.lonn.studentassistant">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".authentification.AuthentificationActivity">
+
+        <activity android:name=".authentication.AuthenticationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="www"
+                    android:host="lonn" />
+
+            </intent-filter>
         </activity>
+
+        <service android:name=".authentication.services.LoginService" />
+        <service android:name=".authentication.services.RegisterService" />
+        <service android:name=".authentication.services.CredentialsCheckService" />
+        <service android:name=".globalServices.studentService.StudentService" />
     </application>
 
 </manifest>
