--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,11 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    dataBinding {
+        enabled = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -20,6 +25,8 @@ android {
         main {
             res.srcDirs =
                     [
+                            'src/main/res/layouts/activities/professorEntityActivity',
+                            'src/main/res/layouts/activities/courseActivity',
                             'src/main/res/layouts/activities/authenticationActivity',
                             'src/main/res/layouts/activities/debugActivity',
                             'src/main/res/layouts/activities/studentActivity',
