--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,16 @@ android {
         main {
             res.srcDirs =
                     [
+                            'src/main/res/drawables/pngs',
+                            'src/main/res/drawables/xmls',
+                            'src/main/res/drawables/vectors',
+                            'src/main/res/drawables',
+                            'src/main/res/layouts/activities/otherActivityEntityActivity',
                             'src/main/res/layouts/activities/courseEntityActivity',
                             'src/main/res/layouts/activities/professorEntityActivity',
-                            'src/main/res/layouts/activities/courseActivity',
                             'src/main/res/layouts/activities/authenticationActivity',
-                            'src/main/res/layouts/activities/debugActivity',
                             'src/main/res/layouts/activities/studentActivity',
+                            'src/main/res/layouts/activities/debugActivity',
                             'src/main/res/layouts/activities',
                             'src/main/res/layouts/inputs',
                             'src/main/res/layouts/others',
@@ -53,11 +57,13 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    implementation 'com.google.firebase:firebase-core:16.0.8'
-    implementation 'com.google.firebase:firebase-auth:16.2.1'
-    implementation 'com.google.firebase:firebase-database:16.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-database:17.0.0'
 
     testImplementation 'junit:junit:4.12'
+
+    implementation group: 'com.google.guava', name: 'guava', version: '15.0'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
