--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".activities.implementations.authentication.AuthenticationActivity"
+            android:name=".activities.implementations.authentication.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
             <intent-filter>
@@ -36,12 +36,17 @@
         <activity
             android:name=".activities.implementations.student.StudentActivity"
             android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".activities.implementations.authentication.AuthenticationActivity"/>
+            android:parentActivityName=".activities.implementations.authentication.LoginActivity"/>
 
         <activity
             android:name=".activities.implementations.debug.DebugActivity"
             android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".activities.implementations.authentication.AuthenticationActivity"/>
+            android:parentActivityName=".activities.implementations.authentication.LoginActivity"/>
+
+        <activity
+            android:name=".activities.implementations.authentication.RegisterActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".activities.implementations.authentication.LoginActivity"/>
 
         <activity
             android:name=".activities.implementations.courseEntity.CourseEntityActivity"
@@ -55,25 +60,6 @@
             android:name=".activities.implementations.otheractivityEntity.OtherActivityEntityActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
 
-        <service android:name=".services.implementations.loginService.LoginService" />
-        <service android:name=".services.implementations.registerService.RegisterService" />
-        <service android:name=".services.implementations.credentialsCheckService.CredentialsCheckService" />
-        <service android:name=".services.implementations.studentService.StudentService" />
-        <service android:name=".services.implementations.coursesService.CourseService"
-            android:stopWithTask="false"/>
-        <service android:name=".services.implementations.userService.UserService" />
-        <service android:name=".services.implementations.professorService.ProfessorService" />
-        <service android:name=".services.implementations.gradeService.GradeService" />
-        <service android:name=".services.implementations.scheduleService.ScheduleClassService" />
-        <service android:name=".services.implementations.otherActivityService.OtherActivityService" />
-
-        <receiver android:name=".services.StartupReceiver" >
-            <intent-filter>
-                <action android:name="RestartStudentService" />
-                <action android:name="RestartCourseService" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
     </application>
 
 </manifest>
