Moved parser to a new module, finished parser for professors, courses, classes, other activities

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,7 @@ dependencies {
     androidTestImplementation 'org.mockito:mockito-android:3.1.0'
 
     implementation project(path: ':firebaselayer')
+    implementation project(path: ':scheduleParser')
 }
 
 apply plugin: 'com.google.gms.google-services'
