--- a/modules/app/build.gradle
+++ b/modules/app/build.gradle
@@ -49,6 +49,7 @@ android {
                             'src/main/res/layouts/activities/registerActivity',
                             'src/main/res/layouts/activities/studentActivity',
                             'src/main/res/layouts/activities/debugActivity',
+                            'src/main/res/layouts/activities/laboratoryEntityActivity',
                             'src/main/res/layouts/activities',
                             'src/main/res/layouts/inputs',
                             'src/main/res/layouts/others',
