WIP: Laboratories & Grades

--- a/modules/app/src/main/AndroidManifest.xml
+++ b/modules/app/src/main/AndroidManifest.xml
@@ -86,6 +86,9 @@
         <activity
             android:name=".activities.implementations.entityActivities.laboratory.LaboratoryInputActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.implementations.entityActivities.laboratory.LaboratoryEntityActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
 
     </application>
 
