--- a/modules/app/build.gradle
+++ b/modules/app/build.gradle
@@ -74,9 +74,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation 'com.google.firebase:firebase-core:17.2.1'
+    implementation 'com.google.firebase:firebase-core:17.2.2'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-database:19.2.0'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
     implementation group: 'com.google.guava', name: 'guava', version: '24.1-jre'
 
     implementation "org.projectlombok:lombok:1.18.8"
