--- a/modules/app/src/main/AndroidManifest.xml
+++ b/modules/app/src/main/AndroidManifest.xml
@@ -52,22 +52,27 @@
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
-            android:name=".activities.implementations.register.credentialsCheck.StudentCheckActivity"
-            android:parentActivityName=".activities.implementations.register.accountChoice.AccountChoiceActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-
-        <activity
-            android:name=".activities.implementations.register.credentialsCheck.ProfessorCheckActivity"
-            android:parentActivityName=".activities.implementations.register.accountChoice.AccountChoiceActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-
-        <activity
-            android:name=".activities.implementations.register.credentialsCheck.AdministratorCheckActivity"
-            android:parentActivityName=".activities.implementations.register.accountChoice.AccountChoiceActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-
-        <activity
             android:name=".activities.implementations.register.AccountCreationActivity"
+            android:parentActivityName=".activities.implementations.register.accountChoice.AccountChoiceActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".activities.implementations.register.credentialsCheck.TokenCheckActivity"
+            android:parentActivityName=".activities.implementations.register.accountChoice.AccountChoiceActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".activities.implementations.register.profileCreation.StudentProfileCreationActivity"
+            android:parentActivityName=".activities.implementations.register.accountChoice.AccountChoiceActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".activities.implementations.register.profileCreation.ProfessorProfileCreationActivity"
+            android:parentActivityName=".activities.implementations.register.accountChoice.AccountChoiceActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".activities.implementations.register.profileCreation.AdministratorProfileCreationActivity"
             android:parentActivityName=".activities.implementations.register.accountChoice.AccountChoiceActivity"
             android:theme="@style/AppTheme.NoActionBar" />
 
