--- a/modules/app/src/main/AndroidManifest.xml
+++ b/modules/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:windowSoftInputMode="adjustResize">
 
         <activity
             android:name=".activities.implementations.LoginActivity"
@@ -99,6 +100,11 @@
         <activity
             android:name=".activities.implementations.register.accountCreation.AdministratorAccountCreationActivity"
             android:parentActivityName=".activities.implementations.register.accountChoice.AccountChoiceActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".activities.implementations.register.ForgotPasswordActivity"
+            android:parentActivityName=".activities.implementations.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
