--- a/Project/modules/app/build.gradle
+++ b/Project/modules/app/build.gradle
@@ -55,6 +55,7 @@ android {
                             'src/main/res/layouts/activities',
                             'src/main/res/layouts/inputs',
                             'src/main/res/layouts/others',
+                            'src/main/res/layouts/dialogs',
                             'src/main/res/layouts/fragments',
                             'src/main/res/layouts/adapters',
                             'src/main/res/layouts',
