--- a/Project/local.properties
+++ b/Project/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 09 00:37:16 EET 2020
-sdk.dir=C\:\\Users\\Lonn\\AppData\\Local\\Android\\Sdk
+#Wed Feb 12 17:03:48 EET 2020
+sdk.dir=C\:\\Users\\mamihai\\AppData\\Local\\Android\\Sdk
